# bridge

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  SECURITY.md  copyright
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-documentation.yml  run-tests.yml
analyzer/: CMakeLists.txt
analyzer/include/: core.hpp  core.ipp  iterators.hpp  map.hpp  map.ipp  mappers.hpp  transformed.hpp  types.hpp  types.ipp
analyzer/include/iterators/: map.hpp  map.ipp  transformed.hpp  transformed.ipp
analyzer/include/mappers/: transform.hpp
analyzer/include/types/: card.hpp  card.ipp  deal.hpp  deal.ipp  metadata.hpp  raw.hpp  trick.hpp  trick.ipp  types.hpp
analyzer/include/types/card/: bidding.hpp  bidding.ipp  playing.hpp  playing.ipp
analyzer/include/types/card/bidding/: bidding.hpp
analyzer/include/types/raw/: uncounted.hpp  uncounted.ipp
analyzer/include/types/trick/: raw.hpp  raw.ipp
analyzer/src/: map_test.cpp  transformed_test.cpp  types_test.cpp
analyzer/src/iterators/: map_test.cpp  transformed.cpp  transformed_test.cpp
analyzer/src/mappers/: transform.cpp  transform_test.cpp
analyzer/src/types/: deal_test.cpp
analyzer/src/types/card/: bidding.cpp  bidding_test.cpp  playing.cpp  playing_test.cpp
analyzer/src/types/raw/: uncounted_test.cpp
analyzer/src/types/trick/: raw_test.cpp
cmake/: FindCcache.cmake
